- re-visit getting records from a repository   - provider now supplies expects a repository implementations to set values to a pre-supplied Record instance to avoid unnecessary object instantiation   - re-factor RecordList to allow repository implementations to work in a streaming fashion - make ResumptionToken class less generic and remove feature to store arbitrary data